--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
+    "@types/react-select": "^3.0.13",
     "lodash.debounce": "^4.0.8",
+    "react-select": "^3.1.0",
     "superagent": "^5.2.2"
   }
 }
