--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
     "@types/react-select": "^3.0.13",
+    "@types/react-show-more": "^2.0.2",
     "lodash.debounce": "^4.0.8",
     "react-select": "^3.1.0",
+    "react-show-more": "^2.0.0",
+    "react-show-more-text": "^1.4.2",
     "superagent": "^5.2.2"
   }
 }
