--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
+    "@types/moment": "^2.13.0",
     "@types/react-select": "^3.0.13",
     "@types/react-show-more": "^2.0.2",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.26.0",
     "react-select": "^3.1.0",
     "react-show-more": "^2.0.0",
     "react-show-more-text": "^1.4.2",
